# deform_control

./: .gitignore  CMakeLists.txt  README  README.md  README.md~  package.xml  setup.sh
CMakeModules/: FindOpenThreads.cmake  Findosg.cmake  FindosgDB.cmake  FindosgGA.cmake  FindosgText.cmake  FindosgUtil.cmake  FindosgViewer.cmake
OpenSceneGraph-2.8.5/: CMakeLists.txt  package.xml
OpenSceneGraph-2.8.5/doc/OpenSceneGraphReferenceDocs/: a00003.html  a00008.html  a00018.html  a00031.html  a00035.html  a00041.html  a00048.html  a00053.html  a00054.html  a00068.html  a00075.html  a00077.html  a00080.html  a00084.html  a00096.html  a00098.html  a00105.html  a00106.html  a00110.html  a00111.html  a00112.html  a00113.html  a00115.html  a00118.html  a00119.html  a00128.html  a00135.html  a00136.html  a00140.html  a00142.html  a00146.html  a00150.html  a00169.html  a00170.html  a00177.html  a00178.html  a00186.html  a00187.html  a00198.html  a00201.html  (+1243 more)
OpenSceneGraph-2.8.5/doc/OpenThreadsReferenceDocs/: a00007.html  a00009.html  a00017.html  a00023.html  a00025.html  a00027.html  a00034.map  a00037.map  a00037.md5  a00039.map  a00042.map  a00043.map  a00045.map  a00052.md5  a00056.html  a00057.map  a00059.html  a00062.html  dir_e9b908b9551f7e8b28284c429e7812f5.html  dir_e9b908b9551f7e8b28284c429e7812f5_dep.md5  functions_enum.html  globals_defs.html  globals_func.html  hierarchy.html  index.html  namespacemembers.html
OpenSceneGraph-2.8.5/lib64/: libosg.so.2.8.5  libosgGA.so.2.8.5  libosgGA.so.74  libosgParticle.so.74  libosgText.so.2.8.5  libosgVolume.so.74
WildMagic5/: .gitignore
WildMagic5/LibApplications/: LibGlutApplications_VC120.vcxproj
WildMagic5/LibGraphics/: makefile.wm5
WildMagic5/LibGraphics/Shaders/: Wm5VisualEffect.cpp
WildMagic5/LibImagics/BinaryOperations/: Wm5Binary2D.cpp
WildMagic5/LibMathematics/Algebra/: Wm5Vector2.h
WildMagic5/LibMathematics/Containment/: Wm5ContMinCircle2.cpp
WildMagic5/LibMathematics/Intersection/: Wm5IntrEllipse2Ellipse2.cpp
WildMagic5/LibPhysics/: makefile.wm5
WildMagic5/LibPhysics/Intersection/: Wm5ExtremalQuery3BSP.cpp
WildMagic5/SamplePhysics/Cloth/: ClothWgl_VC120.vcxproj
bullet-2.79/: CMakeLists.txt
bullet_helpers/: CMakeLists.txt  package.xml
bullet_helpers/src/: bullet_cloth_helpers.cpp
deform_simulator/: CMakeLists.txt  package.xml
deform_simulator/include/custom_scene/: custom_scene.h  gripper_kinematic_object.h  gripper_squeezing_box.h  internal_utils.hpp  manual_gripper_path.h  rviz_marker_manager.h  table_kinematic_object.h
deform_simulator/include/simulation/: SetColorsVisitor.h  basicobjects.h  config_viewer.h  convexdecomp.h  environment.h  plotting.h  recording.h  rope.h  simplescene.h  softbodies.h  stl_object.h
deform_simulator/include/utils/: conversions.h  util.h
deform_simulator/launch/: deform_simulator.launch
deform_simulator/msg/: GripperPoseStamped.msg  GripperTrajectoryStamped.msg  ObjectConfiguration.msg  ObjectConfigurationStamped.msg
deform_simulator/nodes/: CMakeLists.txt  custom_scene_node.cpp  qt_ros_test_node.cpp  qt_ros_test_node.h
deform_simulator/src/: CMakeLists.txt
deform_simulator/src/custom_scene/: CMakeLists.txt  custom_scene.cpp  custom_scene.h  gripper_kinematic_object.cpp  gripper_kinematic_object.h  gripper_squeezing_box.cpp  manual_gripper_path.cpp  rviz_marker_manager.cpp  table_kinematic_object.cpp
deform_simulator/src/custom_scene/old/: colab_cloth.h  custom_scene.old.cpp  custom_scene.old.h  step_state.h  test_colab_cloth.cpp  vector_field.h
deform_simulator/src/nodes/: CMakeLists.txt  custom_scene_node.cpp
deform_simulator/src/simulation/: CMakeLists.txt  basicobjects.cpp  basicobjects.h  bullet_io.cpp  config_scene.cpp  config_viewer.cpp  convexdecomp.cpp  environment.cpp  environment.h  plotting.cpp  plotting.h  recording.cpp  rope.cpp  simplescene.cpp  simplescene.h  softbodies.cpp  stl_object.cpp
deform_simulator/src/tests/: CMakeLists.txt  cloth_colab_folding.cpp  cloth_coverage.cpp  rope_coverage.cpp
deform_simulator/src/utils/: conversions.h  helper_functions.h  util.cpp
deform_simulator/srv/: CmdGrippersTrajectory.srv  GetObjectInitialConfiguration.srv  SetVisualizationMarker.srv
external_libs/OpenSceneGraph-2.8.5/: CMakeLists.txt  package.xml
external_libs/bullet-2.79/: CMakeLists.txt  package.xml
external_libs/bullet3-2.86.1/: CMakeLists.txt  package.xml
external_libs/haptics/: CMakeLists.txt
external_libs/osgBullet-2.0/: CMakeLists.txt  package.xml
external_libs/osgWorks-2.0/: CMakeLists.txt  package.xml
haptics/: CMakeLists.txt
lib/OpenSceneGraph-2.8.5/: osg_cmake.txt
lib/WildMagic5/: .gitignore  compile.sh
lib/haptics/: thread_socket_interface.cpp
osgBullet-2.0/: CMakeLists.txt
osgWorks-2.0/: CMakeLists.txt  package.xml
src/: CMakeLists.txt
src/custom_scene/: CMakeLists.txt  custom_key_handler.cpp  custom_key_handler.h  custom_scene.cpp  custom_scene.h  gripper_kinematic_object.cpp  gripper_kinematic_object.h  point_reflector.h  torus.h  vectorField.h
src/flattening/: clothgrasping.h
src/knots/: CMakeLists.txt  execute_knot_tie.cpp  knots.h
src/robots/: grabbing.cpp  grabbing.h
src/sandbox/: test_plotting.cpp
src/simulation/: CMakeLists.txt  basicobjects.h  convexdecomp.cpp  environment.cpp  environment.h  openravesupport.cpp  plotting.cpp  recording.cpp  recording.h  rope.cpp  simplescene.cpp  simplescene.h  util.cpp  util.h
src/tests/: CMakeLists.txt  colab_cloth.cpp  colab_cloth.h  colab_cloth_custom_scene.cpp  colab_cloth_custom_scene.h  colab_cloth_defines.h  custom_key_handler.cpp  custom_key_handler.h  find_projection.cpp  find_projection.h  gripper_kinematic_object.cpp  gripper_kinematic_object.h  helper_functions.h  internal_utils.hpp  manual_gripper_path.cpp  manual_gripper_path.h  point_reflector.h  pr2_soft_body_gripper_action.h  step_state.h  test_cloth_grasping.cpp  test_colab_cloth.cpp  test_rigidbody_grasping.cpp  test_rope.cpp  test_rope_fork.cpp  torus.h  vectorField.h
src/utils/: CMakeLists.txt  conversions.h  util.cpp
unused_libs/tetgen-1.4.3/: CMakeLists.txt
(+4403 files in other folders)
