add_subdirectory(simulation)
#add_subdirectory(robots)
add_subdirectory(utils)
if(BUILD_PERCEPTION)
    add_subdirectory(perception)
    add_subdirectory(comm)
    add_subdirectory(clouds)
    add_subdirectory(flattening)
    add_subdirectory(knots)
endif(BUILD_PERCEPTION)
add_subdirectory(tests)
#add_subdirectory(sandbox)
