<?xml version="1.0"?>
<package>
  <name>osgBullet</name>
  <version>0.0.1</version>
  <description>Catkin package for OSG Bullet version 2.0</description>
  <maintainer email="dale.mcconachie@ssengineering.ca">Dale McConachie</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>BULLET_PHYSICS</build_depend>
  <build_depend>osgWorks</build_depend>

  <run_depend>BULLET_PHYSICS</run_depend>
  <run_depend>osgWorks</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
